02-orquestacion/exercises/02-distributed/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  selector:
    app: todo-api
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
