02-orquestacion/exercises/02-distributed/k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front
spec:
  selector:
    app: todo-front
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
