02-orquestacion/exercises/02-distributed/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
spec:
  rules:
  - host: todoapp.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front
            port: 
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api
            port: 
              number: 3000
